--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-  --cor-fundo: #6A5ACD;
+  --cor-fundo: #F5FFFA;
   --cor-principal: #836FFF;
   --cor-secundaria: #6959CD;
   --cor-destaque: 	#191970;
