--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 :root {
-  --cor-fundo: #F5FFFA;
+  --cor-fundo: #191970;
   --cor-principal: #836FFF;
   --cor-secundaria: #6959CD;
-  --cor-destaque: 	#191970;
+  --cor-destaque: 	#836FFF;
   --cor-texto: #E6E6FA;
 }
 
