--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
-  --cor-fundo: #191970;
-  --cor-principal: #836FFF;
+  --cor-fundo: #E6E6FA;
+  --cor-principal: #191970;
   --cor-secundaria: #6959CD;
   --cor-destaque: 	#836FFF;
   --cor-texto: #E6E6FA;
